--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -933,6 +933,13 @@
         })
     });
 
+    // 被选择的图标
+    var choosedAnch = new ol.style.Style({
+        image: new ol.style.Icon({
+            src: 'images/anch-yes.png'
+        })
+    });
+
 
 //    var source = new ol.source.Vector();
 //    var vector = new ol.layer.Vector({
