--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -407,7 +407,7 @@
 -->
 <div id="routeInfo">
     <div class="fleet_title">
-        <span>Route C2</span>
+        <span>BCI -> Route C2</span>
         <div class="title_offbtn"></div>
     </div>
     <div class="dividing_line"></div>
@@ -415,20 +415,20 @@
     <div class="routeStartEnd">
         <div class="routePort_Select">
             <div class="routePort_Start">
-                出发港:<span class="routePoint_infoShow">Tubarao</span>
+                标准出发港:<span class="routePoint_infoShow">Tubarao</span>
                 <i></i>
             </div>
             <div class="routePort_End">
-                目的港:<span class="routePoint_infoShow">Rotterdam</span>
+                标准目的港:<span class="routePoint_infoShow">Rotterdam</span>
                 <i></i>
             </div>
             <div class="routePort_End"></div>
         </div>
         <div class="routeStartPier_Select routeStartEndPier">
-            出发码头:<span class="routePoint_infoShow">Rotterdam</span>
+            出发港:<span class="routePoint_infoShow">Rotterdam、Rotterdam</span>
         </div>
         <div class="routeEndPier_Select routeStartEndPier">
-            到达码头:<span class="routePoint_infoShow">Rotterdam</span>
+            到达港:<span class="routePoint_infoShow">Rotterdam</span>
         </div>
     </div>
     <div class="dividing_line"></div>
