--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -205,6 +205,7 @@
                 <span>船舶类型</span><span>IMO</span><span>MMSI</span><span>船名</span><span>DWT(t)</span><span>船龄</span><span>状态</span>
             </li>
         </ul>
+        <!--<div class="loading"></div>-->
         <ul class="fleetList_List">
             <li>
                 <span>Ore</span>
@@ -237,6 +238,7 @@
                 <span><i>i</i></span>
             </li>
         </ul>
+
     </div>
     <div class="dividing_line"></div>
     <div class="fleetInfo_total">
