--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -436,7 +436,16 @@
     <div class="dividing_line"></div>
     <!--航线信息设置-->
     <div class="routeInfo_Install">
-        <div class=""></div>
+        <ul class="routeInfo_List">
+            <li>DWT: <input type="text"> t</li>
+            <li>LOA: <input type="text"> m</li>
+            <li>BEAM: <input type="text"> m</li>
+            <li>DEPTH: <input type="text"> m</li>
+            <li>装载等待时长: <input type="text"> h</li>
+            <li>卸载等待时长: <input type="text"> h</li>
+            <li>DTPH: <input type="text"> t/h</li>
+            <li>Sun&Holiday: <input type="checkbox" name="Sun&Holiday"></li>
+        </ul>
     </div>
     <div class="dividing_line"></div>
     <!--航线中英文说明设置-->
@@ -453,7 +462,8 @@
     <div class="dividing_line"></div>
     <!--航线按钮操作-->
     <div class="routeInstall_Btn">
-
+        <div class="routeInstall_SaveBtn">保存</div>
+        <div class="routeInstall_CancelBtn">取消</div>
     </div>
 </div>
 
