--- a/public/stylesheets/routeInfo.css
+++ b/public/stylesheets/routeInfo.css
@@ -13,24 +13,49 @@
 .oneRoute_List>li{font-size:12px;}
 
 /*航线信息管理弹出框*/
-#routeInfo{width:500px;height:415px;position:fixed;z-index:100;top:70px;left:300px;border-radius: 10px;background: rgba(6, 2, 5, 0.8);display:none;}
+#routeInfo{width:500px;height:415px;position:fixed;z-index:100;top:70px;left:300px;border-radius: 10px;background: rgba(6, 2, 5, 0.8);display:block;}
 .routeStartEnd{width:96%;height:70px;margin:5px auto;}
-.routeInfo_Install{width:96%;height:70px;margin:5px auto;background:#fff;}
 .routeDes{width:96%;height:160px;margin:5px auto;}
 .routeInstall_Btn{width:96%;height:30px;margin:5px auto;}
 /*起终点选择*/
 .routeStartEnd>div{font-size:14px;color:#fff;width:90%;margin:0px auto 5px;height:20px;}
 .routePort_Select>div{display:inline-block;width:49%;height:20px;line-height:20px;}
-.routePort_Select i{display:inline-block;width:10px;height:14px;margin-left:5px;background:url('/images/position_logo.png') no-repeat;position:relative;top:2px;}
-.routeStartPier_Select{}
+.routePort_Select i{display:inline-block;width:12px;height:12px;margin-left:5px;background:url('/icon/position_logo.png') no-repeat;position:relative;top:2px;}
 .routeEndPier_Select{margin-bottom:0px;}
 .routePoint_infoShow{display:inline-block;margin-left:10px;height:20px;line-height:20px;}
 .routeStartEndPier .routePoint_infoShow{width:340px;}
 
+/*标准信息管理*/
+.routeInfo_Install{width:96%;height:70px;margin:5px auto;}
+.routeInfo_List{padding-top:1px;}
+.routeInfo_List>li{display:inline-block;height:20px;font-size:13px;color:#fff;margin:0px 11px 0px;overflow:hidden;}
+.routeInfo_List>li>input{width:26px;height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;background:transparent;color:#fff;border-radius:5px;}
+.routeInfo_List>li:first-child>input,.routeInfo_List>li:nth-child(7)>input{width:50px;}
+.routeInfo_List>li:nth-child(5),.routeInfo_List>li:nth-child(6){margin-right:28px;}
+.routeInfo_List>li:nth-child(5)>input,.routeInfo_List>li:nth-child(6)>input{width:20px;}
+.routeInfo_List>li:nth-child(8){width:110px;}
+.routeInfo_List>li:nth-child(8)>input{width:14px;height:14px;cursor:pointer;position:relative;top:3px;}
 
 /*中英文说明*/
 .routeDes>div{display:inline-block;width:49%;height:160px;font-size:14px;color:#fff;text-align:center;}
 .routeDes>div>textarea{display:inline-block;width:96%;height:140px;font-size:13px;margin-left:5px;resize:none;overflow-y:scroll;}
+
+/*按钮操作*/
+.routeInstall_Btn>div{display:inline-block;margin-left:100px;cursor:pointer;width:80px;height:30px;line-height:30px;text-align:center;background:#2EB1EA;border-radius:5px;color:#fff;font-size:14px;}
+.routeInstall_Btn>div:hover{background:#00B7FF;}
+.routeInstall_Btn>div:active{background:#217BA2;}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
