--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -182,17 +182,6 @@
             <div class="timeLine_List">
                 <div class="timeLine_Axle"></div>
                 <ul class="TimePointList">
-                    <li><span>2017-06-12</span><i></i></li>
-                    <li><span>2017-05-12</span><i></i></li>
-                    <li><span>2017-04-12</span><i></i></li>
-                    <li><span>2017-03-12</span><i></i></li>
-                    <li><span>2017-02-12</span><i></i></li>
-                    <li><span>2017-02-02</span><i></i></li>
-                    <li><span>2016-12-12</span><i></i></li>
-                    <li><span>2016-11-12</span><i></i></li>
-                    <li><span>2016-09-12</span><i></i></li>
-                    <li><span>2016-08-12</span><i></i></li>
-                    <li><span>2016-07-12</span><i></i></li>
                 </ul>
             </div>
             <div class="timeLine_RightBtn"></div>
@@ -207,36 +196,6 @@
         </ul>
         <!--<div class="loading"></div>-->
         <ul class="fleetList_List">
-            <li>
-                <span>Ore</span>
-                <span>9012252</span>
-                <span></span>
-                <span>SINOCARRIER</span>
-                <span>266307</span>
-                <span>20</span>
-                <span>正服役</span>
-                <span><i>i</i></span>
-            </li>
-            <li>
-                <span>Ore</span>
-                <span>9012252</span>
-                <span>441916000</span>
-                <span>SINOCARRIER</span>
-                <span>266307</span>
-                <span>20</span>
-                <span>正服役</span>
-                <span><i>i</i></span>
-            </li>
-            <li>
-                <span>Ore</span>
-                <span>9012252</span>
-                <span>441916000</span>
-                <span>SINOCARRIER</span>
-                <span>266307</span>
-                <span>20</span>
-                <span>正服役</span>
-                <span><i>i</i></span>
-            </li>
         </ul>
 
     </div>
@@ -358,36 +317,6 @@
             </li>
         </ul>
         <ul class="fleetList_List">
-            <li>
-                <span>Ore</span>
-                <span>9012252</span>
-                <span></span>
-                <span>SINOCARRIER</span>
-                <span>266307</span>
-                <span>20</span>
-                <span>正服役</span>
-                <span><i>i</i></span>
-            </li>
-            <li>
-                <span>Ore</span>
-                <span>9012252</span>
-                <span>441916000</span>
-                <span>SINOCARRIER</span>
-                <span>266307</span>
-                <span>20</span>
-                <span>正服役</span>
-                <span><i>i</i></span>
-            </li>
-            <li>
-                <span>Ore</span>
-                <span>9012252</span>
-                <span>441916000</span>
-                <span>SINOCARRIER</span>
-                <span>266307</span>
-                <span>20</span>
-                <span>正服役</span>
-                <span><i>i</i></span>
-            </li>
         </ul>
     </div>
     <div class="dividing_line"></div>
@@ -397,7 +326,8 @@
             <span>0</span>
         </div>
         <div class="searchInfo_operating">
-            <i class="operating_radioBtn"></i>
+            <!--<i class="operating_radioBtn"></i>-->
+            <input type="checkbox" class = "check" checked="">
             <span>显示已在船队船舶</span>
         </div>
     </div>
