--- a/public/stylesheets/fleet.css
+++ b/public/stylesheets/fleet.css
@@ -134,13 +134,13 @@
 .ShipSearch_ShowBtn{display:inline-block;width:16px;height:40px;background:#fff;position: absolute;top:0px;right:0px;cursor:pointer;}
 
 /*船舶搜索结果*/
-#searchShipList{width:650px;height:360px;top:70px;left:300px;display:none;}
+#searchShipList{width:650px;height:360px;top:70px;left:300px;display:block;}
 #searchShipList .fleetInfo_Num{width:140px;}
 .searchInfo_operating{cursor:pointer;}
 .operating_radioBtn{display:inline-block;width:10px;height:10px;margin-right:2px;border:2px solid #fff}
 .operating_radioBtn:hover{background:#ccc;}
 /*.searchInfo_operating>{display:inline-block;width:10px;height:10px;background:url("/images/check.png");margin-right:2px;}*/
-
+.searchInfo_operating>input{width:14px;height:14px;position:relative;top:2px;cursor:pointer;}
 /*加载圈*/
 /*.loading{width:24px;height:24px; margin-left:50%;margin-top:50%;}*/
 
