--- a/public/stylesheets/fleet.css
+++ b/public/stylesheets/fleet.css
@@ -6,10 +6,13 @@
 
 .Fleet_List_ul{background:rgba(0,0,0,0.8);position:absolute;border-radius:2px;}
 .Fleet_List_ul>li{height:30px;cursor:pointer;line-height:30px;color:#fff;font-size:14px;padding-left:10px;}
+.Fleet_List_ul>.choose{height:30px;cursor:pointer;line-height:30px;color:#fff;font-size:14px;padding-left:10px;background:#217BA2;}
 .Fleet_List_ul>li:hover{background:#217BA2;}
+
 .ShipType_list{width:100px;bottom:40px;left:0px;display:none;}
 .FleetName_List{width:160px;bottom:40px;left:100px;display:none;}
 .ShipType_list>li{height:40px;line-height:40px;}
+.ShipType_list>.choose{height:40px;line-height:40px;}
 .ShipType_list>li>i{display:inline-block;width:0px;height:0px;border:4px solid transparent;border-left-color:#eee;float:right;margin-top:17px;}
 .FleetName_List>li>i{font-style:normal;}
 
@@ -52,6 +55,7 @@
 .fleetList_title>li>span{height:30px;line-height:30px;color:#fff;font-size:13px;}
 .fleetList_List{width:100%;height:240px;overflow-y:scroll;}
 .fleetList_List>li{height:20px;color:#fff;font-size:12px;line-height:20px;}
+.fleetList_List>#choose{height:20px;color:#fff;font-size:12px;line-height:20px;background:#217BA2;}
 .fleetList_List>li:hover{background:#217BA2;}
 .fleetList_List>.join{color:#00ff00;}
 .fleetList_List>.leave{color:#ff0000;}
@@ -134,7 +138,7 @@
 .ShipSearch_ShowBtn{display:inline-block;width:16px;height:40px;background:#fff;position: absolute;top:0px;right:0px;cursor:pointer;}
 
 /*船舶搜索结果*/
-#searchShipList{width:650px;height:360px;top:70px;left:300px;display:block;}
+#searchShipList{width:650px;height:360px;top:70px;left:300px;display:none;}
 #searchShipList .fleetInfo_Num{width:140px;}
 .searchInfo_operating{cursor:pointer;}
 .operating_radioBtn{display:inline-block;width:10px;height:10px;margin-right:2px;border:2px solid #fff}
