--- a/public/stylesheets/fleet.css
+++ b/public/stylesheets/fleet.css
@@ -2,17 +2,17 @@
 /*船队左下列表操作*/
 #route_Show>.route_Fleet_btn{position:relative;background:url('/icon/route.png') no-repeat 4px 4px;}
 #route_Show>.route_Fleet_btn:hover{background-position:-24px 4px;}
-#route_Show>.route_Fleet_btn:active{background-position:-52px 4px;}
 
-.Fleet_List_ul{background:rgba(0,0,0,0.8);position:absolute;border-radius:2px;}
+.Fleet_List_ul{background:rgba(6,2,5,0.8);position:absolute;border-radius:2px;}
 .Fleet_List_ul>li{height:30px;cursor:pointer;line-height:30px;color:#fff;font-size:14px;padding-left:10px;}
-.Fleet_List_ul>.choose{height:30px;cursor:pointer;line-height:30px;color:#fff;font-size:14px;padding-left:10px;background:#217BA2;}
+/*.Fleet_List_ul>.choose{height:30px;cursor:pointer;line-height:30px;color:#fff;font-size:14px;padding-left:10px;background:#217BA2;}*/
+.Fleet_List_ul>li.choose{background:#217BA2;} /*选上高亮*/
 .Fleet_List_ul>li:hover{background:#217BA2;}
 
 .ShipType_list{width:100px;bottom:40px;left:0px;display:none;}
 .FleetName_List{width:160px;bottom:40px;left:100px;display:none;}
 .ShipType_list>li{height:40px;line-height:40px;}
-.ShipType_list>.choose{height:40px;line-height:40px;}
+/*.ShipType_list>.choose{height:40px;line-height:40px;}*/
 .ShipType_list>li>i{display:inline-block;width:0px;height:0px;border:4px solid transparent;border-left-color:#eee;float:right;margin-top:17px;}
 .FleetName_List>li>i{font-style:normal;}
 
@@ -82,7 +82,7 @@
 
 
 /*船舶详情页面*/
-#shipDetails{width:385px;height:345px;top:10px;left:400px;display:none;}
+#shipDetails{width:385px;height:345px;top:10px;left:400px;display:block;}
 .shipName{font-size:14px;color:#fff;padding-top:3px;}
 .shipInfo_show{width:96%;height:112px;margin:5px auto;}
 .shipInfo_show>.shipInfo_List{width:250px;height:100px;float:right;}
@@ -111,8 +111,10 @@
 .shipInfo_fleet>ul>li:first-child>span{}
 .shipInfo_fleet>ul>li>span:first-child{margin-right:5px;position:relative;top:-5px;}
 .shipInfo_fleet>ul>li>span:nth-child(2){display:inline-block;width:75px;height:16px;line-height:16px;border:1px solid #ccc;border-radius:5px;cursor:pointer;padding-left:5px;}
-.shipInfo_fleet>ul>li>input{display:inline-block;width:85px;height:18px;line-height:18px;background:transparent;color:#fff;border:1px solid #ccc;border-radius:5px;cursor:pointer;padding-left:5px;overflow:hidden;}
-#shipInfo_EnterTime,#shipInfo_LeaveTime{display:inline-block;width:85px;height:18px;line-height:18px;background:transparent;color:#fff;border:1px solid #ccc;border-radius:5px;cursor:pointer;padding-left:5px;overflow:hidden;}
+/*.shipInfo_fleet>ul>li>input{display:inline-block;width:90px;height:18px;line-height:18px;background:transparent;color:#fff;border:1px solid #ccc;border-radius:5px;cursor:pointer;padding-left:5px;overflow:hidden;}*/
+/*#shipInfo_EnterTime,#shipInfo_LeaveTime{display:inline-block;width:90px;height:18px;line-height:18px;background:transparent;color:#fff;border:1px solid #ccc;border-radius:5px;cursor:pointer;padding-left:5px;overflow:hidden;}*/
+.shipInfo_fleet>ul>li>input{display:inline-block;width:70px;height:18px;line-height:18px;background:transparent;color:#fff;border:1px solid #ccc;border-radius:5px;cursor:pointer;padding-left:5px;overflow:hidden;}
+#shipInfo_EnterTime,#shipInfo_LeaveTime{display:inline-block;width:70px;height:18px;line-height:18px;background:transparent;color:#fff;border:1px solid #ccc;border-radius:5px;cursor:pointer;padding-left:5px;overflow:hidden;}
 .shipInfo_FleetList{width:80px;position:absolute;background:rgba(6, 2, 5, 0.8);z-index:100;left:40px;border:1px solid #323232;border-radius:5px;display:none;}
 .shipInfo_FleetList>li{height:16px;line-height:16px;padding-left:5px;font-size:12px;color:white;cursor:pointer;}
 .shipInfo_FleetList>li:hover{background:#217BA2;}
