--- a/public/stylesheets/fleet.css
+++ b/public/stylesheets/fleet.css
@@ -82,7 +82,7 @@
 
 
 /*船舶详情页面*/
-#shipDetails{width:385px;height:345px;top:10px;left:400px;display:block;}
+#shipDetails{width:385px;height:345px;top:10px;left:400px;display:none;}
 .shipName{font-size:14px;color:#fff;padding-top:3px;}
 .shipInfo_show{width:96%;height:112px;margin:5px auto;}
 .shipInfo_show>.shipInfo_List{width:250px;height:100px;float:right;}
