--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -269,6 +269,7 @@
         <ul>
             <li><span>船队: </span><span class="shipInfo_FleetName"></span>
                 <ul class="shipInfo_FleetList">
+                    <li FleetNumber=>""</li>
                     <li FleetNumber="F1">Capesize</li>
                     <li FleetNumber="F2">VLOC</li>
                     <li FleetNumber="F3">Panamax</li>
