--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -242,17 +242,18 @@
             </div>
         </div>
         <ul class="shipInfo_List">
+            <li>船名: CHINA STEEL SUSTAINABILITY</li>
             <li>IMO: 9012252</li>
             <li>船级社: KR</li>
             <li>MMSI: 441916000</li>
-            <li>船籍港: Panama</li>
-            <li>DWT: 266307 mt</li>
             <li>船旗: <img src=""> KOR</li>
+            <li>建造年代: 1992-08-27</li>
             <li>吃水: 10.419 m</li>
             <li>状态: 正服役</li>
-            <li>长*宽*高: 172*26*14 m</li>
+            <li>DWT: 266307 mt</li>
             <li>类型: 货船</li>
-            <li>建造年代: 1992-08-27</li>
+            <li>船籍港: Bander Seri Begawa</li>
+            <li>长*宽*高: 172*26*14 m</li>
         </ul>
     </div>
     <div class="dividing_line"></div>
@@ -269,7 +270,7 @@
         <ul>
             <li><span>船队: </span><span class="shipInfo_FleetName"></span>
                 <ul class="shipInfo_FleetList">
-                    <li FleetNumber=>""</li>
+                    <li FleetNumber=></li>
                     <li FleetNumber="F1">Capesize</li>
                     <li FleetNumber="F2">VLOC</li>
                     <li FleetNumber="F3">Panamax</li>
