--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -10,6 +10,7 @@
     <link rel='stylesheet' href='/stylesheets/newberth.css' />
     <link rel='stylesheet' href='/stylesheets/fleet.css' />
     <link rel='stylesheet' href='/stylesheets/standardRoute.css' />
+    <link rel="stylesheet" href="/stylesheets/datePicker/ion.calendar.css">
 
     <link rel="stylesheet" href="http://openlayers.org/en/v3.17.1/css/ol.css" type="text/css">
     <link rel="stylesheet" href="https://openlayers.org/en/v4.1.1/css/ol.css" type="text/css">
@@ -31,7 +32,7 @@
     <!--<link href="/stylesheets/datePicker/foundation.min.css" rel="stylesheet" type="text/css">-->
     <!--<link href="/stylesheets/datePicker/foundation-datepicker.min.css" rel="stylesheet" type="text/css">-->
     <!--2-->
-    <link rel="stylesheet" href="/stylesheets/datePicker/ion.calendar.css">
+
 
 </head>
 <body style="overflow:hidden;">
@@ -1327,17 +1328,17 @@
 </script>
 
 <script type="text/javascript">
-    gvChartInit();
-$(function(){
-    $('#myTable5').gvChart({
-        chartType: 'PieChart',
-        gvSettings: {
-            vAxis: {title: 'No of players'},
-            hAxis: {title: 'Month'},
-            width: 260,
-            height: 240
-        }
-    });
-});
+//    gvChartInit();
+//$(function(){
+//    $('#myTable5').gvChart({
+//        chartType: 'PieChart',
+//        gvSettings: {
+//            vAxis: {title: 'No of players'},
+//            hAxis: {title: 'Month'},
+//            width: 260,
+//            height: 240
+//        }
+//    });
+//});
 </script>
 </html>
